# bookbrain

./: .env.example  .gitignore  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
bookbrain-backend/: pyproject.toml
bookbrain-backend/scripts/: batch_upload.py  import_parsed.py  migrate.sh
bookbrain-backend/src/bookbrain/: __init__.py  main.py
bookbrain-backend/src/bookbrain/api/: __init__.py
bookbrain-backend/src/bookbrain/api/routes/: books.py  health.py  search.py
bookbrain-backend/src/bookbrain/core/: __init__.py  config.py  database.py  exceptions.py  vector_db.py
bookbrain-backend/src/bookbrain/models/: __init__.py  chunker.py  embedder.py  parser.py  schemas.py
bookbrain-backend/src/bookbrain/repositories/: __init__.py  book_repository.py  vector_repository.py
bookbrain-backend/src/bookbrain/scripts/: __init__.py  migrate_guide.py  migrate_pg.py  migrate_qdrant.py  migrate_s3.py  migrate_status.py
bookbrain-backend/src/bookbrain/services/: __init__.py  batch_indexer.py  chunker.py  embedder.py  indexer.py  parser.py  searcher.py  sentence_chunker.py  storage.py
bookbrain-backend/tests/: conftest.py  test_api_books.py  test_api_integration.py  test_api_search.py  test_batch_indexer.py  test_book_repository.py  test_chunker.py  test_embedder.py  test_health.py  test_indexer.py  test_integration.py  test_migrate.py  test_parser.py  test_searcher.py  test_sentence_chunker.py  test_vector_db.py  test_vector_repository.py
bookbrain-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  (+1 more)
(+83 files in other folders)
